Fixed layout issues

--- a/src/app/overview/overview.component.css
+++ b/src/app/overview/overview.component.css
@@ -1,3 +1,8 @@
 .slider {
   margin-bottom: 10px;
 }
+
+.capital-container {
+  margin-bottom: 20px;
+  padding: 0;
+}
